--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-# Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/biblioteca
-spring.datasource.username=seu_usuario
-spring.datasource.password=sua_senha
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Biblioteca
+spring.datasource.username=postgres
+spring.datasource.password=082130
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do Hibernate
-spring.jpa.hibernate.ddl-auto=update  # Cria ou atualiza as tabelas automaticamente
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Configuração do console H2 (caso queira manter o H2 para testes)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
